--- a/index.html
+++ b/index.html
@@ -105,12 +105,17 @@
     </div>
   </section>
 
- 
-  <form id="adminForm">
-  <input id="adminName" placeholder="Admin name" required />
-  <input id="adminRole" placeholder="Role" required />
-  <button type="submit">Add Admin</button>
-</form>
+<section id="admins">
+  <h2>Admins</h2>
+  <div class="panel">
+    <div id="adminsBoard" class="list"></div>
+    <form id="adminForm">
+      <input id="adminName" placeholder="Admin name" required />
+      <input id="adminRole" placeholder="Role" required />
+      <button type="submit">Add Admin</button>
+    </form>
+  </div>
+</section>
 
 <div id="adminsBoard" class="list"></div>
   <!-- Attractions -->
@@ -492,4 +497,5 @@ adminForm.addEventListener("submit", async e => {
 </body>
 
 </html>
+
 
