--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
   <nav>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="notes.html">Notes</a></li>
-      <li><a href="stories.html">Stories</a></li>
-      <li><a href="admins.html">Admins</a></li>
-      <li><a href="attractions.html">Attractions</a></li>
+      <li><a href="#notes">Notes</a></li>
+      <li><a href="#stories">Stories</a></li>
+      <li><a href="#admins">Admins</a></li>
+      <li><a href="#attractions">Attractions</a></li>
+
       <li><a href="updates.html">Updates</a></li>
       <li><a href="admin.html">Bookings Admin</a></li>
     </ul>
@@ -542,3 +543,4 @@
   </script>
 </body>
 </html>
+
