Fix HTML encoding issues in admin.html

--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" /
   <title>Bros Hub – Admin Bookings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
@@ -188,5 +188,6 @@ onSnapshot(query(attractionsRef, orderBy("tsClient","desc")), snap => {
 });
   </script>
 </body>
+
 
 </html>
