--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
       <li><a href="#stories">Stories</a></li>
       <li><a href="#news">News</a></li>
       <li><a href="#announcements">Announcements</a></li>
-      <li><a href="#admins.html">Admins</a></li>
+      <li><a href="admin.html">Bookings Admin</a></li>
+
+      <li><a href="#admins">Admins</a></li>
       <li><a href="#attractions">Attractions</a></li>
       <li><a href="#calendar">Calendar</a></li>
     </ul>
@@ -458,4 +460,5 @@
   </script>
 </body>
 </html>
+
 
