--- a/admin.html
+++ b/admin.html
@@ -1,60 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /
-  <title>Bros Hub – Admin Bookings</title>
+  <meta charset="UTF-8" />
+  <title>Bookings Admin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root { --bg:#0d0d0d; --panel:#1a1a1a; --neon:#00ff66; --muted:#82ffa6; }
-    body { margin:0; background:var(--bg); color:var(--neon); font-family:system-ui, Trebuchet MS, sans-serif; }
+    body { margin:0; background:var(--bg); color:var(--neon); font-family:system-ui; }
     header { padding:1.5rem; text-align:center; background:var(--panel); border-bottom:2px solid var(--neon); }
     h1 { margin:0; }
-    nav { background:var(--bg); border-bottom:2px solid var(--neon); position:sticky; top:0; z-index:1000; }
-    nav ul { list-style:none; display:flex; flex-wrap:wrap; gap:.5rem; padding:.6rem; margin:0; justify-content:center; }
+    nav { background:var(--bg); border-bottom:2px solid var(--neon); }
+    nav ul { list-style:none; display:flex; gap:.5rem; padding:.6rem; margin:0; justify-content:center; }
     nav a { color:var(--neon); text-decoration:none; padding:.4rem .8rem; border:1px solid var(--neon); border-radius:4px; font-weight:600; }
     nav a:hover { background:var(--neon); color:var(--bg); }
-    section { max-width:900px; margin:auto; padding:1rem; }
-    h2 { border-bottom:2px solid var(--neon); padding-bottom:.3rem; }
-    .panel { background:var(--panel); border:1px solid var(--neon); border-radius:8px; padding:1rem; }
+    .panel { background:var(--panel); border:1px solid var(--neon); border-radius:8px; padding:1rem; margin:1rem auto; max-width:900px; }
     .list { display:flex; flex-direction:column; gap:.6rem; }
     .item { display:flex; justify-content:space-between; align-items:flex-start; border:1px dashed var(--neon); border-radius:6px; padding:.6rem; }
-    .item-main { flex:1; }
-    .item-meta { font-size:.85rem; color:var(--muted); margin-top:.25rem; }
-    .actions { display:flex; gap:.4rem; }
+    .item-main { flex:1; white-space:pre-wrap; }
+    .item-main strong { display:block; }
+    .item-meta { color:var(--muted); font-size:.9rem; margin-top:.3rem; }
+    .actions { display:flex; gap:.4rem; flex-wrap:wrap; }
     .btn { background:none; border:1px solid var(--neon); color:var(--neon); padding:.25rem .6rem; border-radius:4px; cursor:pointer; }
     .btn:hover { background:var(--neon); color:var(--bg); }
   </style>
 </head>
 <body>
   <header>
-    <h1>Admin – Bookings</h1>
-    <div class="item-meta">Manage all incoming bookings here</div>
+    <h1>Bookings Admin</h1>
+    <div class="item-meta">Manage incoming bookings</div>
   </header>
 
+  <!-- Navigation back to hub -->
   <nav>
     <ul>
-      <li><a href="index.html">Hub</a></li>
-      <li><a href="admin.html">Bookings Admin</a></li>
+      <li><a href="index.html">Back to Hub</a></li>
     </ul>
   </nav>
 
-  <section id="adminBookings">
-    <h2>Incoming Bookings</h2>
-    <div class="panel">
-      <div id="bookingsBoard" class="list"></div>
-    </div>
-  </section>
-
-  <section id="adminAttractions">
-  <h2>Manage Attractions</h2>
   <div class="panel">
-    <div id="adminAttractionsBoard" class="list"></div>
+    <div id="bookingsBoard" class="list"></div>
   </div>
-</section>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-    import { getFirestore, collection, onSnapshot, query, orderBy, doc, updateDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
+    import {
+      getFirestore, collection, onSnapshot, query, orderBy, doc, updateDoc, deleteDoc
+    } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAOWDg95YOPCBYzN5vWOVBik0AUNOyqZeI",
@@ -68,126 +59,62 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+    const fmt = (ts) => ts?.toDate ? ts.toDate().toLocaleString() : "";
 
     const bookingsRef = collection(db, "bookings");
-
-    // Live bookings list
-    onSnapshot(query(bookingsRef, orderBy("tsClient","desc")), snap => {
+    onSnapshot(query(bookingsRef, orderBy("bookedAt","desc")), snap => {
       const board = document.getElementById("bookingsBoard");
       board.innerHTML = "";
       snap.forEach(docSnap => {
         const d = docSnap.data();
-        const div = document.createElement("div");
-        div.className = "item";
+        const item = document.createElement("div");
+        item.className = "item";
 
         const main = document.createElement("div");
         main.className = "item-main";
         main.innerHTML = `
-          <strong>${d.customer || "Anonymous"}</strong> booked <em>${d.attraction}</em><br/>
-          Price: $${d.price}
-          <div class="item-meta">Status: ${d.status}</div>
+          <strong>${d.attractionName}</strong>
+          <div>Booked by ${d.bookedBy}</div>
+          <div>Price: ${d.price}</div>
+          <div>Status: ${d.status || "Pending"}</div>
+          <div class="item-meta">Booked at ${fmt(d.bookedAt)}</div>
         `;
 
         const actions = document.createElement("div");
         actions.className = "actions";
 
-        const confirmBtn = document.createElement("button");
-        confirmBtn.className = "btn";
-        confirmBtn.textContent = "Confirm";
-        confirmBtn.onclick = async () => {
-          await updateDoc(doc(db, "bookings", docSnap.id), { status: "confirmed" });
+        // Edit booking
+        const editBtn = document.createElement("button");
+        editBtn.className = "btn"; editBtn.textContent = "Edit";
+        editBtn.onclick = async () => {
+          const newName = prompt("Edit attraction name:", d.attractionName);
+          const newPrice = prompt("Edit price:", d.price);
+          const newStatus = prompt("Edit status (Pending/Confirmed):", d.status || "Pending");
+          if (newName?.trim() && newPrice?.trim()) {
+            await updateDoc(doc(db, "bookings", docSnap.id), {
+              attractionName: newName.trim(),
+              price: newPrice.trim(),
+              status: newStatus.trim()
+            });
+          }
         };
 
-        const completeBtn = document.createElement("button");
-        completeBtn.className = "btn";
-        completeBtn.textContent = "Completed";
-        completeBtn.onclick = async () => {
-          await updateDoc(doc(db, "bookings", docSnap.id), { status: "completed" });
-        };
-
-        const deleteBtn = document.createElement("button");
-        deleteBtn.className = "btn";
-        deleteBtn.textContent = "Delete";
-        deleteBtn.onclick = async () => {
-          if (confirm("Are you sure you want to delete this booking?")) {
+        // Delete booking
+        const delBtn = document.createElement("button");
+        delBtn.className = "btn"; delBtn.textContent = "Delete";
+        delBtn.onclick = async () => {
+          if (confirm("Delete this booking?")) {
             await deleteDoc(doc(db, "bookings", docSnap.id));
           }
         };
 
-        actions.appendChild(confirmBtn);
-        actions.appendChild(completeBtn);
-        actions.appendChild(deleteBtn);
-
-        div.appendChild(main);
-        div.appendChild(actions);
-        board.appendChild(div);
+        actions.appendChild(editBtn);
+        actions.appendChild(delBtn);
+        item.appendChild(main);
+        item.appendChild(actions);
+        board.appendChild(item);
       });
     });
-
-
-
-    const attractionsRef = collection(db, "attractions");
-
-// Live attractions list for admin
-onSnapshot(query(attractionsRef, orderBy("tsClient","desc")), snap => {
-  const board = document.getElementById("adminAttractionsBoard");
-  board.innerHTML = "";
-  snap.forEach(docSnap => {
-    const d = docSnap.data();
-    const div = document.createElement("div");
-    div.className = "item";
-
-    const main = document.createElement("div");
-    main.className = "item-main";
-    main.innerHTML = `
-      <strong>${d.name}</strong> — $${d.price}
-      <div class="item-meta">Added by ${d.addedBy}</div>
-      <div class="item-meta">Status: ${d.available ? "Available" : "Unavailable"}</div>
-    `;
-
-    const actions = document.createElement("div");
-    actions.className = "actions";
-
-    // Toggle availability
-    const toggleBtn = document.createElement("button");
-    toggleBtn.className = "btn";
-    toggleBtn.textContent = d.available ? "Mark Unavailable" : "Mark Available";
-    toggleBtn.onclick = async () => {
-      await updateDoc(doc(db, "attractions", docSnap.id), { available: !d.available });
-    };
-    actions.appendChild(toggleBtn);
-
-    // Edit button
-    const editBtn = document.createElement("button");
-    editBtn.className = "btn";
-    editBtn.textContent = "Edit";
-    editBtn.onclick = async () => {
-      const newName = prompt("Edit attraction name:", d.name);
-      const newPrice = prompt("Edit price:", d.price);
-      if (newName && newPrice) {
-        await updateDoc(doc(db, "attractions", docSnap.id), { name: newName, price: newPrice });
-      }
-    };
-    actions.appendChild(editBtn);
-
-    // Delete button
-    const deleteBtn = document.createElement("button");
-    deleteBtn.className = "btn";
-    deleteBtn.textContent = "Delete";
-    deleteBtn.onclick = async () => {
-      if (confirm("Delete this attraction?")) {
-        await deleteDoc(doc(db, "attractions", docSnap.id));
-      }
-    };
-    actions.appendChild(deleteBtn);
-
-    div.appendChild(main);
-    div.appendChild(actions);
-    board.appendChild(div);
-  });
-});
   </script>
 </body>
-
-
 </html>
